[metadata]
name = nasqueron-reports
version = 0.1.0
author = Sébastien Santoro
author_email = dereckson@espace-win.org
description = Run MariaDB or MySQL query and format as report
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
url = https://devcentral.nasqueron.org/source/reports/
project_urls =
    Bug Tracker = https://devcentral.nasqueron.org/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/run-report
    bin/sql-result-to-mediawiki-table
python_requires = >=3.6
install_requires =
    PyYAML>=6.0,<7.0
    hvac>=2.3,<3.0
    mysql-connector-python>=9.4,<10.0
    sqlparse>=0.5,<0.6

[options.packages.find]
where = src
