[metadata]
name = rhyne-wyse
version = 0.1.0
author = Sébastien Santoro
author_email = dereckson@espace-win.org
description = Automated agent to publish reports
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
url = https://devcentral.nasqueron.org/source/reports/
project_urls =
    Bug Tracker = https://devcentral.nasqueron.org/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/update-agora-reports
python_requires = >=3.6
install_requires =
    PyYAML>=6.0,<7.0
    nasqueron-reports>=0.1.0,<1.0
    pywikibot>=10.5.0,<11.0
    secretsmith>=0.1.0,<1.0

[options.packages.find]
where = src
